# childhood-immunization-demand-calculator

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  mkdocs.yml  pyproject.toml
data/: Natality, 2016-2022 expanded.txt  hhs_regions.yaml  weights.csv
docs/: index.md
drugdemand/: __init__.py  nirsevimab.py
scripts/: create_scenarios.py  params.yaml  pct_heavier_by_age.R  postprocess.py  preprocess.py  run_scenarios.py
tests/: test_drug.py  test_nirsevimab.py  test_population.py  test_population_id.py
tests/data/: births.parquet  results.parquet  weights.parquet
